0.7.0/_sources/guides/preferences.md
(napari-preferences)=

# Preferences

## napari settings

napari provides persistent settings that are stored on a *per environment basis*.
This means that if you have multiple Python environments, each with a napari installation (e.g.
different versions), the napari in each environment will have its own set of stored preferences.
So, for example, you could have an environment where napari always uses the Light theme and another one
where napari always uses the Dark theme.

A wide range of settings are available, organized into sections, and described in more detail below.

### Where settings are stored

Settings are stored in a `settings.yaml` file and napari uses [`appdirs`](https://github.com/ActiveState/appdirs)
to determine the save location: the platform-specific user configuration directory.
You can check where a napari installation has stored settings by looking for "Settings path" in the output of:

```bash
napari --info
```

## Resetting settings to defaults using the command line (CLI)

Sometimes, for example due to a version change, an issue with the stored settings can prevent
napari from launching or cause other issues. In those cases, it can be useful to reset the settings
to the defaults from the command line. To reset all napari settings to the default values:

```bash
napari --reset
```

## Programmatic access to the settings

Settings are managed by getting the global settings object and modifying settings:

```python
from napari.settings import get_settings

settings = get_settings()
# then modify... e.g:
settings.appearance.theme = 'dark'
```

You can get more information about individual settings, their types, and default values in each of the
settings section descriptions below.

## The Preferences dialog

napari provides a Preferences dialog to manage the settings using a graphical user interface (GUI).
Importantly, this dialog also allows you to customize napari keyboard shortcuts (keybindings).

On Windows and Linux, the Preferences dialog can be accessed in the **File** menu. On macOS, it can be
accessed in the **napari** menu.

The settings are grouped by sections that are accessible in a list on the left side of the dialog.



## Application Settings

Main application settings.

![application](../images/_autogenerated/preferences-application.png)

:::{dropdown} More details on the individual Application settings



##### Brush size on mouse move modifiers

*Modifiers to activate changing the brush size by moving the mouse.*

* <small>Access programmatically with `SETTINGS.application.brush_size_on_mouse_move_modifiers`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_BRUSH_SIZE_ON_MOUSE_MOVE_MODIFIERS`</small>
* <small>Type: `<enum 'BrushSizeOnMouseModifiers'>`</small>

* <small>Default: `<BrushSizeOnMouseModifiers.ALT: 'Alt'>`.</small>




##### Confirm window or application closing

*Ask for confirmation before closing a napari window or application (all napari windows).*

* <small>Access programmatically with `SETTINGS.application.confirm_close_window`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_CONFIRM_CLOSE_WINDOW`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `True`.</small>




##### Console notification level

*Select the notification level for the console.*

* <small>Access programmatically with `SETTINGS.application.console_notification_level`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_CONSOLE_NOTIFICATION_LEVEL`</small>
* <small>Type: `<enum 'NotificationSeverity'>`</small>

* <small>Default: `<NotificationSeverity.NONE: 'none'>`.</small>




##### Dask cache

*Settings for dask cache (does not work with distributed arrays)*

* <small>Access programmatically with `SETTINGS.application.dask`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_DASK`</small>
* <small>Type: `<class 'napari.settings._application.DaskSettings'>`</small>

* <small>Default: `DaskSettings(enabled=True, cache=4.191808512)`.</small>




##### Depth Axis Orientation

*Orientation of the depth axis in 3D view.
Default is "Towards"; <0.6.0 was "Away".*

* <small>Access programmatically with `SETTINGS.application.depth_axis_orientation`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_DEPTH_AXIS_ORIENTATION`</small>
* <small>Type: `<enum 'DepthAxisOrientation'>`</small>

* <small>Default: `<DepthAxisOrientation.TOWARDS: 'towards'>`.</small>






##### Grid Height

*Number of rows in the grid.*

* <small>Access programmatically with `SETTINGS.application.grid_height`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_GRID_HEIGHT`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `-1`.</small>




##### Grid Spacing

*The amount of spacing inbetween grid viewboxes.
If between 0 and 1, it is interpreted as a proportion of the size of the viewboxes.
If equal or greater than 1, it is interpreted as screen pixels.*

* <small>Access programmatically with `SETTINGS.application.grid_spacing`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_GRID_SPACING`</small>
* <small>Type: `<class 'float'>`</small>

* <small>Default: `0`.</small>




##### Grid Stride

*Number of layers to place in each grid viewbox before moving on to the next viewbox.
A negative stride will cause the order in which the layers are placed in the grid to be reversed.
0 is not a valid entry.*

* <small>Access programmatically with `SETTINGS.application.grid_stride`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_GRID_STRIDE`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `1`.</small>




##### Grid Width

*Number of columns in the grid.*

* <small>Access programmatically with `SETTINGS.application.grid_width`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_GRID_WIDTH`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `-1`.</small>




##### GUI notification level

*Select the notification level for the user interface.*

* <small>Access programmatically with `SETTINGS.application.gui_notification_level`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_GUI_NOTIFICATION_LEVEL`</small>
* <small>Type: `<enum 'NotificationSeverity'>`</small>

* <small>Default: `<NotificationSeverity.INFO: 'info'>`.</small>




##### Delay to treat button as hold in seconds

*This affects certain actions where a short press and a long press have different behaviors, such as changing the mode of a layer permanently or only during the long press.*

* <small>Access programmatically with `SETTINGS.application.hold_button_delay`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_HOLD_BUTTON_DELAY`</small>
* <small>Type: `<class 'float'>`</small>

* <small>Default: `0.5`.</small>




##### Horizontal Axis Orientation

*Orientation of the horizontal axis in 2D and 3D view.
Default is "Right".*

* <small>Access programmatically with `SETTINGS.application.horizontal_axis_orientation`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_HORIZONTAL_AXIS_ORIENTATION`</small>
* <small>Type: `<enum 'HorizontalAxisOrientation'>`</small>

* <small>Default: `<HorizontalAxisOrientation.RIGHT: 'right'>`.</small>






##### Language

*Select the display language for the user interface.*

* <small>Access programmatically with `SETTINGS.application.language`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_LANGUAGE`</small>
* <small>Type: `<class 'napari.settings._fields.Language'>`</small>

* <small>Default: `'en'`.</small>




##### New labels data type

*data type for labels layers created with the "new labels" button.*

* <small>Access programmatically with `SETTINGS.application.new_labels_dtype`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_NEW_LABELS_DTYPE`</small>
* <small>Type: `<enum 'LabelDTypes'>`</small>

* <small>Default: `<LabelDTypes.uint8: 'uint8'>`.</small>






##### Playback frames per second

*Playback speed in frames per second.*

* <small>Access programmatically with `SETTINGS.application.playback_fps`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_PLAYBACK_FPS`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `10`.</small>




##### Playback loop mode

*Loop mode for playback.*

* <small>Access programmatically with `SETTINGS.application.playback_mode`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_PLAYBACK_MODE`</small>
* <small>Type: `<enum 'LoopMode'>`</small>

* <small>Default: `<LoopMode.LOOP: 'loop'>`.</small>










##### Save window geometry

*Toggle saving the main window size and position.*

* <small>Access programmatically with `SETTINGS.application.save_window_geometry`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_SAVE_WINDOW_GEOMETRY`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `True`.</small>




##### Save window state

*Toggle saving the main window state of widgets.*

* <small>Access programmatically with `SETTINGS.application.save_window_state`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_SAVE_WINDOW_STATE`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `False`.</small>




##### Full path to a startup script

*Path to a Python script that will be executed on napari startup.
This can be used to customize the behavior of napari or load specific plugins automatically.*

* <small>Access programmatically with `SETTINGS.application.startup_script`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_STARTUP_SCRIPT`</small>
* <small>Type: `<class 'pathlib.Path'>`</small>

* <small>Default: `PosixPath('.')`.</small>




##### Vertical Axis Orientation

*Orientation of the vertical axis in 2D and 3D view.
Default is "Down".*

* <small>Access programmatically with `SETTINGS.application.vertical_axis_orientation`.</small>
* <small>Environmental variable: `NAPARI_APPLICATION_VERTICAL_AXIS_ORIENTATION`</small>
* <small>Type: `<enum 'VerticalAxisOrientation'>`</small>

* <small>Default: `<VerticalAxisOrientation.DOWN: 'down'>`.</small>
















:::



## Appearance Settings

User interface appearance settings.

![appearance](../images/_autogenerated/preferences-appearance.png)

:::{dropdown} More details on the individual Appearance settings



##### Font size

*Select the user interface font size.*

* <small>Access programmatically with `SETTINGS.appearance.font_size`.</small>
* <small>Environmental variable: `NAPARI_APPEARANCE_FONT_SIZE`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `9`.</small>




##### Highlight

*Select the highlight color and thickness to use when hovering over shapes/points.*

* <small>Access programmatically with `SETTINGS.appearance.highlight`.</small>
* <small>Environmental variable: `NAPARI_APPEARANCE_HIGHLIGHT`</small>
* <small>Type: `<class 'napari.settings._appearance.HighlightSettings'>`</small>

* <small>Default: `HighlightSettings(highlight_thickness=1, highlight_color=[0.0, 0.6, 1.0, 1.0])`.</small>




##### Show layer tooltips

*Toggle to display a tooltip on mouse hover.*

* <small>Access programmatically with `SETTINGS.appearance.layer_tooltip_visibility`.</small>
* <small>Environmental variable: `NAPARI_APPEARANCE_LAYER_TOOLTIP_VISIBILITY`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `False`.</small>




##### Logo variant

*Select which logo variant to use.*

* <small>Access programmatically with `SETTINGS.appearance.logo`.</small>
* <small>Environmental variable: `NAPARI_APPEARANCE_LOGO`</small>
* <small>Type: `<class 'napari.settings._fields.Logo'>`</small>

* <small>Default: `'auto'`.</small>




##### Theme

*Select the user interface theme.*

* <small>Access programmatically with `SETTINGS.appearance.theme`.</small>
* <small>Environmental variable: `NAPARI_APPEARANCE_THEME`</small>
* <small>Type: `<class 'napari.settings._fields.Theme'>`</small>

* <small>Default: `'dark'`.</small>




##### Update status based on layer

*Calculate status bar based on current active layer and mouse position.*

* <small>Access programmatically with `SETTINGS.appearance.update_status_based_on_layer`.</small>
* <small>Environmental variable: `NAPARI_APPEARANCE_UPDATE_STATUS_BASED_ON_LAYER`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `True`.</small>




:::



## Plugins Settings

Plugins settings.

![plugins](../images/_autogenerated/preferences-plugins.png)

:::{dropdown} More details on the individual Plugins settings





##### File extension readers

*Assign file extensions to specific reader plugins*

* <small>Access programmatically with `SETTINGS.plugins.extension2reader`.</small>
* <small>Environmental variable: `NAPARI_PLUGINS_EXTENSION2READER`</small>
* <small>Type: `dict[str, str]`</small>

* <small>Default: `None`.</small>






:::



## Shortcuts Settings

Shortcut settings.

![shortcuts](../images/_autogenerated/preferences-shortcuts.png)

:::{dropdown} More details on the individual Shortcuts settings



##### shortcuts

*Set keyboard shortcuts for actions.*

* <small>Access programmatically with `SETTINGS.shortcuts.shortcuts`.</small>
* <small>Environmental variable: `NAPARI_SHORTCUTS_SHORTCUTS`</small>
* <small>Type: `dict[str, list[app_model.types._keys._keybindings.KeyBinding]]`</small>

**Default Shortcuts**

| Action | Shortcut |
|--------|----------|
| napari:toggle_console_visibility | [<KeyBinding at 0x7f946ef7f350: Ctrl+Shift+C>] |
| napari:toggle_ndisplay | [<KeyBinding at 0x7f946ef7dd00: Ctrl+Y>] |
| napari:toggle_theme | [<KeyBinding at 0x7f946ef7d4c0: Ctrl+Shift+T>] |
| napari:reset_view | [<KeyBinding at 0x7f946ef7f080: Ctrl+R>] |
| napari:delete_selected_layers | [<KeyBinding at 0x7f946ef7d3d0: Ctrl+Delete>, <KeyBinding at 0x7f946f525e20: Ctrl+Backspace>] |
| napari:show_shortcuts | [<KeyBinding at 0x7f946effaab0: Ctrl+Alt+/>] |
| napari:increment_dims_left | [<KeyBinding at 0x7f946eff8d10: Left>] |
| napari:increment_dims_right | [<KeyBinding at 0x7f946effb350: Right>] |
| napari:focus_axes_up | [<KeyBinding at 0x7f946effbda0: Alt+Up>] |
| napari:focus_axes_down | [<KeyBinding at 0x7f946effaf30: Alt+Down>] |
| napari:roll_axes | [<KeyBinding at 0x7f946effbb90: Ctrl+E>] |
| napari:transpose_axes | [<KeyBinding at 0x7f946effbbf0: Ctrl+T>] |
| napari:rotate_layers | [<KeyBinding at 0x7f946effbc50: Ctrl+Alt+T>] |
| napari:toggle_grid | [<KeyBinding at 0x7f946effb050: Ctrl+G>] |
| napari:toggle_selected_visibility | [<KeyBinding at 0x7f946effb320: V>] |
| napari:toggle_unselected_visibility | [<KeyBinding at 0x7f946eff9ac0: Shift+V>] |
| napari:select_layer_above | [<KeyBinding at 0x7f946effae70: Ctrl+Up>] |
| napari:select_layer_below | [<KeyBinding at 0x7f946effbef0: Ctrl+Down>] |
| napari:show_only_layer_above | [<KeyBinding at 0x7f946effbe90: Shift+Alt+Up>] |
| napari:show_only_layer_below | [<KeyBinding at 0x7f946effbfe0: Shift+Alt+Down>] |
| napari:hold_for_pan_zoom | [<KeyBinding at 0x7f946effbf80: Space>] |
| napari:activate_labels_erase_mode | [<KeyBinding at 0x7f946cf100b0: 1>, <KeyBinding at 0x7f946cf10170: E>] |
| napari:activate_labels_paint_mode | [<KeyBinding at 0x7f946cf10230: 2>, <KeyBinding at 0x7f946cf13680: P>] |
| napari:activate_labels_polygon_mode | [<KeyBinding at 0x7f946cf135f0: 3>] |
| napari:activate_labels_fill_mode | [<KeyBinding at 0x7f946cf13560: 4>, <KeyBinding at 0x7f946cf12f60: F>] |
| napari:activate_labels_picker_mode | [<KeyBinding at 0x7f946cf12810: 5>, <KeyBinding at 0x7f946cf12a80: L>] |
| napari:activate_labels_pan_zoom_mode | [<KeyBinding at 0x7f946cf12f00: 6>, <KeyBinding at 0x7f946cf13110: Z>] |
| napari:activate_labels_transform_mode | [<KeyBinding at 0x7f946cf13260: 7>] |
| napari:new_label | [<KeyBinding at 0x7f946cf133b0: M>] |
| napari:swap_selected_and_background_labels | [<KeyBinding at 0x7f946cf13650: X>] |
| napari:decrease_label_id | [<KeyBinding at 0x7f946cf13530: ->] |
| napari:increase_label_id | [<KeyBinding at 0x7f946cf136b0: =>] |
| napari:decrease_brush_size | [<KeyBinding at 0x7f946cf13770: [>] |
| napari:increase_brush_size | [<KeyBinding at 0x7f946cf137d0: ]>] |
| napari:toggle_preserve_labels | [<KeyBinding at 0x7f946cf13830: B>] |
| napari:reset_polygon | [<KeyBinding at 0x7f946ef7eff0: Escape>] |
| napari:complete_polygon | [<KeyBinding at 0x7f946cf13860: Enter>] |
| napari:activate_points_add_mode | [<KeyBinding at 0x7f946cf138c0: 2>, <KeyBinding at 0x7f946cf13920: P>] |
| napari:activate_points_select_mode | [<KeyBinding at 0x7f946cf13980: 3>, <KeyBinding at 0x7f946cf139e0: S>] |
| napari:activate_points_pan_zoom_mode | [<KeyBinding at 0x7f946cf13a40: 4>, <KeyBinding at 0x7f946cf13aa0: Z>] |
| napari:activate_points_transform_mode | [<KeyBinding at 0x7f946cf13b00: 5>] |
| napari:select_all_in_slice | [<KeyBinding at 0x7f946cf13b60: A>] |
| napari:select_append_all_in_slice | [<KeyBinding at 0x7f946cf13bc0: Shift+A>] |
| napari:select_all_data | [<KeyBinding at 0x7f946cf13c20: Ctrl+A>] |
| napari:delete_selected_points | [<KeyBinding at 0x7f946cf13c80: 1>, <KeyBinding at 0x7f946cf13ce0: Delete>, <KeyBinding at 0x7f946cf13d40: Backspace>] |
| napari:activate_add_rectangle_mode | [<KeyBinding at 0x7f946cf13350: R>] |
| napari:activate_add_ellipse_mode | [<KeyBinding at 0x7f946cf132c0: E>] |
| napari:activate_add_line_mode | [<KeyBinding at 0x7f946cf13800: L>] |
| napari:activate_add_path_mode | [<KeyBinding at 0x7f946cf13da0: T>] |
| napari:activate_add_polyline_mode | [<KeyBinding at 0x7f946cf13e00: Shift+L>] |
| napari:activate_add_polygon_mode | [<KeyBinding at 0x7f946cf13e60: P>] |
| napari:activate_add_polygon_lasso_mode | [<KeyBinding at 0x7f946cf13ec0: Shift+P>] |
| napari:activate_direct_mode | [<KeyBinding at 0x7f946cf13f20: 4>, <KeyBinding at 0x7f946cf13f80: D>] |
| napari:activate_select_mode | [<KeyBinding at 0x7f946cf13fe0: 5>, <KeyBinding at 0x7f946cf2c080: S>] |
| napari:activate_shapes_pan_zoom_mode | [<KeyBinding at 0x7f946cf2c0e0: 6>, <KeyBinding at 0x7f946cf2c140: Z>] |
| napari:activate_shapes_transform_mode | [<KeyBinding at 0x7f946cf2c1a0: 7>] |
| napari:activate_vertex_insert_mode | [<KeyBinding at 0x7f946cf2c200: 2>, <KeyBinding at 0x7f946cf2c260: I>] |
| napari:activate_vertex_remove_mode | [<KeyBinding at 0x7f946cf2c2c0: 1>, <KeyBinding at 0x7f946cf2c320: X>] |
| napari:copy_selected_shapes | [<KeyBinding at 0x7f946cf2c380: Ctrl+C>] |
| napari:paste_shape | [<KeyBinding at 0x7f946cf2c3e0: Ctrl+V>] |
| napari:move_shapes_selection_to_front | [<KeyBinding at 0x7f946cf2c440: F>] |
| napari:move_shapes_selection_to_back | [<KeyBinding at 0x7f946cf2c4a0: B>] |
| napari:select_shapes_in_slice | [<KeyBinding at 0x7f946cf2c500: A>, <KeyBinding at 0x7f946cf2c560: Ctrl+A>] |
| napari:delete_selected_shapes | [<KeyBinding at 0x7f946cf2c5c0: 3>, <KeyBinding at 0x7f946cf2c620: Delete>, <KeyBinding at 0x7f946cf2c680: Backspace>] |
| napari:finish_drawing_shape | [<KeyBinding at 0x7f946cf2c6e0: Enter>, <KeyBinding at 0x7f946cf2c740: Escape>] |
| napari:orient_plane_normal_along_x | [<KeyBinding at 0x7f946cf2c7a0: X>] |
| napari:orient_plane_normal_along_y | [<KeyBinding at 0x7f946cf2c800: Y>] |
| napari:orient_plane_normal_along_z | [<KeyBinding at 0x7f946cf2c860: Z>] |
| napari:orient_plane_normal_along_view_direction | [<KeyBinding at 0x7f946cf2c8c0: O>] |
| napari:auto_contrast_once | [<KeyBinding at 0x7f946cf2c920: C>] |
| napari:activate_image_pan_zoom_mode | [<KeyBinding at 0x7f946cf2c980: 1>] |
| napari:activate_image_transform_mode | [<KeyBinding at 0x7f946cf2c9e0: 2>] |
| napari:activate_vectors_pan_zoom_mode | [<KeyBinding at 0x7f946cf2ca40: 1>] |
| napari:activate_vectors_transform_mode | [<KeyBinding at 0x7f946cf2caa0: 2>] |
| napari:activate_tracks_pan_zoom_mode | [<KeyBinding at 0x7f946cf2cb00: 1>] |
| napari:activate_tracks_transform_mode | [<KeyBinding at 0x7f946cf2cb60: 2>] |
| napari:activate_surface_pan_zoom_mode | [<KeyBinding at 0x7f946cf2cbc0: 1>] |
| napari:activate_surface_transform_mode | [<KeyBinding at 0x7f946cf2cc20: 2>] |






:::



## Experimental Settings

Experimental settings.

![experimental](../images/_autogenerated/preferences-experimental.png)

:::{dropdown} More details on the individual Experimental settings



##### Render Images Asynchronously

*Asynchronous loading of image data. 
This setting partially loads data while viewing.*

* <small>Access programmatically with `SETTINGS.experimental.async_`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_ASYNC_`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `False`.</small>




##### Enable autoswapping rendering buffers.

*Autoswapping rendering buffers improves quality by reducing tearing artifacts, while sacrificing some performance.*

* <small>Access programmatically with `SETTINGS.experimental.autoswap_buffers`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_AUTOSWAP_BUFFERS`</small>
* <small>Type: `<class 'bool'>`</small>

* <small>Default: `False`.</small>




##### Colormap backend to use for Labels layer

*Color mapping backend to use for Labels layer.
'partsegcore' requires the optional 'partsegcore-compiled-backend' package.
'numba' requires the optional 'numba' package.
'pure python' uses only NumPy and Python.
The 'fastest available' backend will select the fastest installed backend.
*

* <small>Access programmatically with `SETTINGS.experimental.colormap_backend`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_COLORMAP_BACKEND`</small>
* <small>Type: `<enum 'ColormapBackend'>`</small>

* <small>Default: `fastest_available`.</small>






##### Double-click Labels polygon completion radius (-1 to always complete)

*Max radius in pixels from first vertex for double-click to complete a polygon; set -1 to always complete.*

* <small>Access programmatically with `SETTINGS.experimental.completion_radius`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_COMPLETION_RADIUS`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `-1`.</small>




##### Minimum distance threshold of shapes lasso and path tool

*Value determines how many screen pixels one has to move before another vertex can be added to the polygonor path.*

* <small>Access programmatically with `SETTINGS.experimental.lasso_vertex_distance`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_LASSO_VERTEX_DISTANCE`</small>
* <small>Type: `<class 'int'>`</small>

* <small>Default: `10`.</small>




##### Shapes polygon lasso and path RDP epsilon

*Setting this higher removes more points from polygons or paths. 
Setting this to 0 keeps all vertices of a given polygon or path.*

* <small>Access programmatically with `SETTINGS.experimental.rdp_epsilon`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_RDP_EPSILON`</small>
* <small>Type: `<class 'float'>`</small>

* <small>Default: `0.5`.</small>




##### Triangulation backend to use for Shapes layer

*Triangulation backend to use for Shapes layer.
The 'bermuda' requires the optional 'bermuda' package.
The 'partsegcore' requires the optional 'partsegcore-compiled-backend' package.
The 'triangle' requires the optional 'triangle' package.
The 'numba' backend requires the optional 'numba' package.
The 'pure python' backend uses the default Python triangulation from vispy.
The 'fastest available' backend will select the fastest available backend.
*

* <small>Access programmatically with `SETTINGS.experimental.triangulation_backend`.</small>
* <small>Environmental variable: `NAPARI_EXPERIMENTAL_TRIANGULATION_BACKEND`</small>
* <small>Type: `<enum 'TriangulationBackend'>`</small>

* <small>Default: `fastest_available`.</small>




:::



## Reset settings to defaults using the Preferences dialog

To reset the preferences click on the `Restore defaults` button and continue
by clicking on `Restore Defaults`.

![](../images/_autogenerated/preferences-reset.png)

## Overriding settings

napari settings can also be overridden by using *environment variables*.
The variable names follow a pattern: they start with `NAPARI`,
followed by the Preference section name, yielding, for example, `NAPARI_APPLICATION`, followed by the setting
name, yielding, for example, `NAPARI_APPLICATION_CONFIRM_CLOSE_WINDOW`.
(This specific setting controls whether napari will prompt you to confirm closing the application.)
You can also find the environmentvariable names for each setting in the descriptions for each of the Preference sections above.

You can override settings for a single napari session by setting environment variables at launch:


On Mac and Linux:
```
NAPARI_APPLICATION_CONFIRM_CLOSE_WINDOW=False napari
```
On Windows:
```
set NAPARI_APPLICATION_CONFIRM_CLOSE_WINDOW=False && napari
```

Or programatically in a script/notebook:

```python
import os
os.environ['NAPARI_APPLICATION_CONFIRM_CLOSE_WINDOW'] = 'False'
```

Or, depending on your shell, you can persist environment variables for a shell session
using the `export` command (e.g. `bash`, `zsh`):

```bash
export NAPARI_APPLICATION_CONFIRM_CLOSE_WINDOW=False
```

 Or, to persist between shell sessions, add the above command to your
 shell configuration file e.g `~/.bashrc` or `~/.zshrc`.

